applications/omada-controller/resources/app/extensions/templates/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omada-controller-web
subsets:
  - addresses:
      - ip: 10.0.71.1
    ports:
      - name: http
        port: 443
        protocol: TCP
