applications/omada-controller/resources/app/extensions/templates/service.yaml
# network
---
apiVersion: v1
kind: Service
metadata:
  name: omada-controller-web
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
