applications/omada-controller/resources/app/extensions/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name omada-controller-web
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-home-muehlbachler-io
    external-dns.alpha.kubernetes.io/provider: public
    external-dns.alpha.kubernetes.io/target: 144.208.195.224,2a01:aea0:dd3:25a:1000:3:3:1
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: &domain omada.network.vie.home.muehlbachler.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: *name
                port:
                  number: 80
  tls:
    - secretName: omada-controller-tls-cert
      hosts:
        - *domain
